# libchartae

./: .gitignore  meson.build
demo/: demo.c  meson.build
src/: chartae.h  chparser.c  chparser.h  chtree.c  chtree.h  chtreeview.c  chtreeview.h  meson.build
src/nodes/: chnode.c  chnode.h  chpangonode-parser.h  chpangonode.c  chpangonode.h  chtextnode.c  chtextnode.h  chtitlenode-parser.h  chtitlenode.c  chtitlenode.h
subprojects/: pango2.wrap
